--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <div class="line">|</div>
         <div class="line">|</div>
         <div class="line">|</div>
+        <div class="line">|</div>
         <div class="center"></div>
         <div class="sec"></div>
         <div class="min"></div>
